--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Net Liquidity Dashboard</title>
-    <style>
-      body { margin: 0; padding: 0; background-color: #0d1117; }
-    </style>
+    
+    <title>Net Fed Liquidity Dashboard | Hoagie Trades</title>
+    
+    <meta name="description" content="Live tracking of Net Fed Liquidity, TGA, RRP, and Fed Assets. Real-time financial dashboard updated daily.">
   </head>
   <body>
     <div id="root"></div>
